crates/tackc_parser/src/ast/snapshots/tackc_parser__ast__stmt__run_stmt_test.snap
---
source: crates/tackc_parser/src/ast/stmt.rs
expression: expr
input_file: crates/tackc_parser/src/ast/stmt-parse/expr-stmt.tck
---
Ok(ExpressionStatement(ExpressionStatement(
  inner: Expression(
    kind: Add(Expression(
      kind: IntLit(Interned(12543183117416492085, PhantomData), Decimal),
      span: Span(
        start: 0,
        end: 1,
      ),
    ), Expression(
      kind: Mul(Expression(
        kind: IntLit(Interned(14671982871472631300, PhantomData), Decimal),
        span: Span(
          start: 4,
          end: 5,
        ),
      ), Expression(
        kind: IntLit(Interned(14894071113539278494, PhantomData), Decimal),
        span: Span(
          start: 8,
          end: 9,
        ),
      )),
      span: Span(
        start: 4,
        end: 9,
      ),
    )),
    span: Span(
      start: 0,
      end: 9,
    ),
  ),
  span: Span(
    start: 0,
    end: 10,
  ),
)))
