crates/tackc_parser/src/ast/snapshots/tackc_parser__ast__stmt__run_stmt_test@expr.tck.snap
---
source: crates/tackc_parser/src/ast/stmt.rs
expression: expr
input_file: crates/tackc_parser/src/ast/stmt-parse/expr.tck
---
Ok(ExpressionStatement(ExpressionStatement(
  span: Span(
    start: 0,
    end: 10,
  ),
  inner: Expression(
    span: Span(
      start: 0,
      end: 9,
    ),
    kind: Add(Expression(
      span: Span(
        start: 0,
        end: 1,
      ),
      kind: Primary(Primary(
        span: Span(
          start: 0,
          end: 1,
        ),
        kind: IntLit(Symbol(
          span: Span(
            start: 0,
            end: 1,
          ),
          inner: Interned(12543183117416492085, PhantomData),
        ), Decimal),
        id: NodeId(0),
      )),
      id: NodeId(1),
    ), Expression(
      span: Span(
        start: 4,
        end: 9,
      ),
      kind: Mul(Expression(
        span: Span(
          start: 4,
          end: 5,
        ),
        kind: Primary(Primary(
          span: Span(
            start: 4,
            end: 5,
          ),
          kind: IntLit(Symbol(
            span: Span(
              start: 4,
              end: 5,
            ),
            inner: Interned(14671982871472631300, PhantomData),
          ), Decimal),
          id: NodeId(2),
        )),
        id: NodeId(3),
      ), Expression(
        span: Span(
          start: 8,
          end: 9,
        ),
        kind: Primary(Primary(
          span: Span(
            start: 8,
            end: 9,
          ),
          kind: IntLit(Symbol(
            span: Span(
              start: 8,
              end: 9,
            ),
            inner: Interned(14894071113539278494, PhantomData),
          ), Decimal),
          id: NodeId(4),
        )),
        id: NodeId(5),
      )),
      id: NodeId(6),
    )),
    id: NodeId(7),
  ),
  id: NodeId(8),
)))
